# ComfyUI_StoryCreator

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: kosmos2_sampler.py  story_sampler_simple.py  text2.py
workflow/: Short_Story_Simpler_Sample.json  Short_Story_Simpler_Sample_Kosmos2.json
